[package]
name = "demo01"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = "0.1.16"
warp = "0.3.7"
serde = {version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.31", default-features = false }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
